# atproto-mcp

./: .gitignore  POWER.md  README.md  mcp.json  pyproject.toml
.github/workflows/: tests.yml
src/atproto_mcp/: __init__.py  __main__.py  config.py  fetcher.py  indexer.py  parser.py  prompts.py  resources.py  server.py  state.py  tools.py
tests/: smoke_test.py  test_source_filtered_search_regression.py  test_tags.py
